Add Landing/Home Page

--- a/src/pages/CarePortal.css
+++ b/src/pages/CarePortal.css
@@ -1,6 +1,6 @@
 /* CarePortal.css */
 
-body {
+.container-mt-5{
     font-family: 'Montserrat', sans-serif;
     background-color: #F5F5DC; /* Backdrop color */
     color: #003366; /* Navigation and headers color */
