--- a/src/pages/CarePortal.css
+++ b/src/pages/CarePortal.css
@@ -2,18 +2,62 @@
 
 .container-mt-5{
     font-family: 'Montserrat', sans-serif;
-    background-color: #F5F5DC; /* Backdrop color */
+    background-color: white; /* Backdrop color */
     color: #003366; /* Navigation and headers color */
   }
   .card-item-custom{
     height: 400px;
   }
 
+  .row{
+    display: flex;
+    justify-content: space-around;
+  }
 
- 
+  .card1{
+    display: flex;
+    flex-direction: column;
+    /* background-color: #003366; */
+    border-color: #003366;
+    border-radius: 2;
+    border-width: 20px;
+    width: 43%;
+    /* border: none; */
+    padding: 50px;
+    margin: 20px 70px 20px 40px;
+    /* color: white; */
+  }
+
+  #header-portal{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 2em;
+  }
+
+#card-size{
+    height: 400px;
+    width: 700px;
+    margin-left: 40px;
+}
+
+#card-size1{
+  height: 400px;
+  width: 700px;
+}
+
+  .mb-4-care-portal-header{
+    color: black;
+    text-align: center;
+    margin: 2em 0em;
+    font-weight: 600;
+    font-size: 2em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
   
   .care-portal-header {
     color: #003366; /* Navigation and headers color */
+    margin: 1.5em 0em 2em 0em;
   }
   
   .wellbeing-card {
